# python-aurelia-templating

./: .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
src/aurelia_templating/: __init__.py  render.py
tests/: test_basic_rendering.py
