[tool.poetry]
name = "aurelia_templating"
version = "0.1.0"
description = "Python library to render templates of the Aurelia JavaScript framework with Python."
authors = ["Julien Enselme <jenselme@jujens.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
tox = "^3.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
