[tool.poetry]
name = "aurelia_templating"
version = "0.1.0"
description = "Python library to render templates of the Aurelia JavaScript framework with Python."
authors = ["Julien Enselme <jenselme@jujens.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.16.1"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-debugger = "^3.2.1"
flake8-deprecated = "^1.3"
flake8-comprehensions = "^3.2.3"
flake8-docstrings = "^1.5.0"
flake8-quotes = "^3.2.0"
flake8-print = "^3.1.4"
black = "^19.10b0"
pre-commit = "^2.6.0"
flake8-isort = "^3.0.1"
ipython = "^7.16.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length=100
known_first_party = "aurelia_templating"
skip_glob = "*snapshots*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
